添加跟随主人的活动和行为